# OpcUaModules

./: CMakeLists.txt  CMakePresets.json  opendaq_ref
.github/workflows/: ci-downstream.yml  ci.yml
changelog/: changelog
cmake/: ModuleOptions.cmake
modules/: CMakeLists.txt
modules/opcua_client_module/: CMakeLists.txt
modules/opcua_client_module/src/: CMakeLists.txt  (+1 more)
modules/opcua_server_module/: CMakeLists.txt
shared/libraries/: CMakeLists.txt
shared/libraries/opcua/: CMakeLists.txt
shared/libraries/opcua/opcuaclient/: CMakeLists.txt
shared/libraries/opcua/opcuaclient/include/opcuaclient/: cached_reference_browser.h  opcuaclient.h
shared/libraries/opcua/opcuaclient/src/: CMakeLists.txt  cached_reference_browser.cpp  opcuaclient.cpp
shared/libraries/opcua/opcuaclient/tests/: CMakeLists.txt
shared/libraries/opcua/opcuaclient/tests/src/: main.cpp  test_attribute_reader.cpp  test_cached_reference_browser.cpp  test_opcuaclient.cpp  test_opcuanodefactory.cpp  test_opcuanodefactorybrowser.cpp  test_opcuataskprocessor.cpp  test_opcuatimertaskhelper.cpp
shared/libraries/opcua/opcuaserver/: CMakeLists.txt
shared/libraries/opcua/opcuaserver/include/opcuaserver/: opcuaserver.h  opcuasession.h
shared/libraries/opcua/opcuaserver/src/: CMakeLists.txt  node_event_manager.cpp  opcuaserver.cpp  opcuasession.cpp
shared/libraries/opcua/opcuaserver/tests/: CMakeLists.txt  main.cpp  test_opcuaserver.cpp  test_opcuasession.cpp
shared/libraries/opcua/opcuashared/: CMakeLists.txt
shared/libraries/opcua/opcuashared/include/opcuashared/: opcuadatavalue.h  opcuavariant.h
shared/libraries/opcua/opcuashared/src/: CMakeLists.txt  opcuadatavalue.cpp  opcuavariant.cpp
shared/libraries/opcua/opcuashared/tests/: CMakeLists.txt  main.cpp  test_opcua_security.cpp  test_opcuadatavalue.cpp
shared/libraries/opcua/tests/: CMakeLists.txt
shared/libraries/opcua/tests/testopcua/: CMakeLists.txt  test_opcua_authentication.cpp  test_opcua_permissions.cpp  test_opcua_security.cpp
shared/libraries/opcuageneric/opcuageneric_client/src/: CMakeLists.txt  generic_client_device_impl.cpp  opcua_monitored_item_fb_impl.cpp
shared/libraries/opcuageneric/opcuageneric_client/tests/: CMakeLists.txt  opcuaservertesthelper.cpp  opcuaservertesthelper.h  test_app.cpp  test_daq_test_helper.h  test_opcua_generic_client_device.cpp  test_opcua_monitored_item_fb.cpp  timer.h
shared/libraries/opcuatms/: CMakeLists.txt
shared/libraries/opcuatms/opcuatms/: CMakeLists.txt
shared/libraries/opcuatms/opcuatms/include/opcuatms/converters/: property_object_conversion_utils.h
shared/libraries/opcuatms/opcuatms/src/: CMakeLists.txt
shared/libraries/opcuatms/opcuatms/tests/: CMakeLists.txt  testapp.cpp
shared/libraries/opcuatms/opcuatms_client/: CMakeLists.txt
shared/libraries/opcuatms/opcuatms_client/include/opcuatms_client/: tms_attribute_collector.h
shared/libraries/opcuatms/opcuatms_client/include/opcuatms_client/objects/: tms_client_component_impl.h  tms_client_context.h  tms_client_daqserver_component_factory.h  tms_client_daqserver_component_impl.h  tms_client_device_impl.h  tms_client_input_port_impl.h  tms_client_object_impl.h  tms_client_property_object_impl.h  tms_client_server_factory.h  tms_client_server_impl.h
shared/libraries/opcuatms/opcuatms_client/src/: CMakeLists.txt  tms_attribute_collector.cpp  tms_client.cpp
shared/libraries/opcuatms/opcuatms_client/src/objects/: tms_client_component_impl.cpp  tms_client_context.cpp  tms_client_daqserver_component_impl.cpp  tms_client_device_impl.cpp  tms_client_function_impl.cpp  tms_client_input_port_impl.cpp  tms_client_object_impl.cpp  tms_client_procedure_impl.cpp  tms_client_property_impl.cpp  tms_client_property_object_impl.cpp  tms_client_server_impl.cpp
shared/libraries/opcuatms/opcuatms_client/tests/: CMakeLists.txt  test_app.cpp
shared/libraries/opcuatms/opcuatms_server/: CMakeLists.txt
shared/libraries/opcuatms/opcuatms_server/include/opcuatms_server/: node_event_manager.h  tms_server_context.h
shared/libraries/opcuatms/opcuatms_server/include/opcuatms_server/objects/: tms_server_analog_value.h  tms_server_component.h  tms_server_daqserver_component.h  tms_server_device.h  tms_server_eval_value.h  tms_server_folder.h  tms_server_function_block_type.h  tms_server_input_port.h  tms_server_object.h  tms_server_property.h  tms_server_property_object.h  tms_server_server.h  tms_server_value.h
shared/libraries/opcuatms/opcuatms_server/src/: CMakeLists.txt  node_event_manager.cpp  tms_server.cpp  tms_server_context.cpp
shared/libraries/opcuatms/opcuatms_server/src/objects/: tms_server_analog_value.cpp  tms_server_daqserver_component.cpp  tms_server_device.cpp  tms_server_folder.cpp  tms_server_function_block_type.cpp  tms_server_input_port.cpp  tms_server_object.cpp  tms_server_property.cpp  tms_server_property_object.cpp  tms_server_server.cpp  tms_server_value.cpp
shared/libraries/opcuatms/opcuatms_server/tests/: CMakeLists.txt  test_helpers.h  test_tms_channel.cpp  test_tms_daqserver_component.cpp  test_tms_device.cpp  test_tms_function_block.cpp  test_tms_input_port.cpp  test_tms_property.cpp  test_tms_property_object.cpp  test_tms_signal.cpp  test_tms_user_access.cpp  test_tms_value.cpp  testapp.cpp  tms_server_test.cpp  tms_server_test.h
shared/libraries/opcuatms/tests/: CMakeLists.txt
shared/libraries/opcuatms/tests/opcuatms_integration/: CMakeLists.txt  main.cpp  test_property_object_advanced.cpp  test_tms_amplifier.cpp  test_tms_channel.cpp  test_tms_component.cpp  test_tms_daqserver_component.cpp  test_tms_device.cpp  test_tms_folder.cpp  test_tms_function_block.cpp  test_tms_function_block_type.cpp  test_tms_function_property.cpp  test_tms_fusion_device.cpp  test_tms_input_port.cpp  test_tms_integration.cpp  test_tms_property.cpp  test_tms_property_object.cpp  test_tms_signal.cpp  test_tms_user_access.cpp  tms_object_integration_test.cpp  tms_object_integration_test.h
shared/libraries/opcuatms/tests/test_utils/: CMakeLists.txt  test_user_helper.h  tms_object_test.cpp  tms_object_test.h
(+27 files in other folders)
